--- a/dts/common/nordic/nrf7120_enga.dtsi
+++ b/dts/common/nordic/nrf7120_enga.dtsi
@@ -7,6 +7,7 @@
 #include <mem.h>
 #include <nordic/nrf_common.dtsi>
 #include <zephyr/dt-bindings/clock/nrf-auxpll.h>
+#include <zephyr/dt-bindings/adc/nrf-saadc.h>
 
 /delete-node/ &sw_pwm;
 
